수정: 협업툴 내용 추가

--- a/collaboration_report/cb_190516_협업툴.md
+++ b/collaboration_report/cb_190516_협업툴.md
@@ -5,6 +5,7 @@
 #### github projects
  * 우선 멘토님 조언에 따라 github에 projects 이용할 예정입니다.
  * 템플릿은 basic kanban으로 설정하였습니다.
+ * 프로젝트명은 nyangterest_hi, nyangterest_yu로 분리되어 진행합니다.
 
 ### 그 외 후보 리스트 
 
