수정: mobx  내용 정리 중 수정

--- a/yu_report/yu_190617_MobX.md
+++ b/yu_report/yu_190617_MobX.md
@@ -1,3 +1,17 @@
-## **MobX 적용하기**
+## **프로젝트에 MobX 적용하기**
 
 안타깝게도 CRA는 mobx 프로젝트를 진행하는데 필요한 decorator 문법을 default로 지원하지 않는다. decorator는 mobx를 사용하게 되면 보게 될 문법으로, @observable, @observer처럼 ‘@’를 사용한 문법의 형태를 가진다.
+
+yarn run eject
+
+yarn.lock파일을 지우고
+
+yarn add mobx mobx-react babel-preset-mobx
+
+mobx에서 제공하는 preset인 bable-preset-mobx를 설치하면 이제 cra에서도 mobx의 decorator를 사용할 수 있게 된다. package.json 파일을 연 뒤 babel 부분을 다음과 같이 수정해준다.
+
+mobx를 사용할 때에는 ‘observable’를 사용하여 state를 관리해주면 된다. 우리는 먼저 mobx와 mobx-react에서 observable과 observer를 import해야 한다
+
+setState는 불필요한 렌더링을 만듦
+
+MobX는 컴포넌트를 효과적으로 작은 store로 전환함
