--- a/yu_report/yu_190617_MobX.md
+++ b/yu_report/yu_190617_MobX.md
@@ -1,17 +1,48 @@
 ## **프로젝트에 MobX 적용하기**
 
-안타깝게도 CRA는 mobx 프로젝트를 진행하는데 필요한 decorator 문법을 default로 지원하지 않는다. decorator는 mobx를 사용하게 되면 보게 될 문법으로, @observable, @observer처럼 ‘@’를 사용한 문법의 형태를 가진다.
 
-yarn run eject
+* eject 명령어로 CRA 추출 ( CRA(Creat-React-App)는 mobx 프로젝트를 진행하는데 필요한 decorator 문법을 default로 지원하지 않는다. decorator는 mobx를 사용하게 되면 보게 될 문법으로, @observable, @observer처럼 ‘@’를 사용한 문법의 형태를 가진다)
+* 
+<pre> yarn run eject (untracked file이 있을시에는 에러 메시지가 뜨니 stash나 커밋후 다시 시도해야 한다.)</pre>
 
-yarn.lock파일을 지우고
+* yarn.lock파일 제거
 
-yarn add mobx mobx-react babel-preset-mobx
+* MobX 및 관련 라이브러리 설치(mobx에서 제공하는 preset인 bable-preset-mobx를 설치하면 이제 CRA에서도 mobx의 decorator를 사용 가능하다.)
 
-mobx에서 제공하는 preset인 bable-preset-mobx를 설치하면 이제 cra에서도 mobx의 decorator를 사용할 수 있게 된다. package.json 파일을 연 뒤 babel 부분을 다음과 같이 수정해준다.
+<pre> yarn add mobx mobx-react babel-preset-mobx </pre>
 
-mobx를 사용할 때에는 ‘observable’를 사용하여 state를 관리해주면 된다. 우리는 먼저 mobx와 mobx-react에서 observable과 observer를 import해야 한다
+* package.json 파일을 연 뒤 babel 부분 수정
+<pre>
+		"plugins": [
+			[
+				"@babel/plugin-proposal-decorators",
+				{
+					"legacy": true
+				}
+			],
+			[
+				"@babel/plugin-proposal-class-properties",
+				{
+					"loose": true
+				}
+			]
+		]
 
-setState는 불필요한 렌더링을 만듦
+</pre>
 
-MobX는 컴포넌트를 효과적으로 작은 store로 전환함
+
+* mobx를 사용할 때에는 observable를 사용하여 state를 관리
+
+
+* Store폴더 생성후 관련 파일 작성
+* 
+* 파일에 state , action 로직 위치 이동
+  
+* setState는 불필요한 렌더링을 만듦
+		@action 은 setSate
+		@computed는 this.state 
+
+### 고민..
+ 1. hook으로 리팩토링을 한 후  mobx와 적용하는게 나을까? 라이프사이클상태에서 진행해야 할까?
+ 2. 후자라면 mobx와 React lifecycle은 어떻게 사용해야 할까?
+  
