수정: 프로젝트에 mobx 적용 내용정리 업데이트 중

--- a/yu_report/yu_190617_MobX.md
+++ b/yu_report/yu_190617_MobX.md
@@ -45,4 +45,5 @@
 ### 고민..
  1. hook으로 리팩토링을 한 후  mobx와 적용하는게 나을까? 라이프사이클상태에서 진행해야 할까?
  2. 후자라면 mobx와 React lifecycle은 어떻게 사용해야 할까?
+ 3. async 함수는 어떻게 사용하나?
   
