작성완료: MobX 프로젝트 적용시 문서 작성 완료외

--- a/yu_report/yu_190617_MobX.md
+++ b/yu_report/yu_190617_MobX.md
@@ -1,8 +1,9 @@
 ## **프로젝트에 MobX 적용하기**
 
+### 수정 과정
 
 * eject 명령어로 CRA 추출 ( CRA(Creat-React-App)는 mobx 프로젝트를 진행하는데 필요한 decorator 문법을 default로 지원하지 않는다. decorator는 mobx를 사용하게 되면 보게 될 문법으로, @observable, @observer처럼 ‘@’를 사용한 문법의 형태를 가진다)
-* 
+  
 <pre> yarn run eject (untracked file이 있을시에는 에러 메시지가 뜨니 stash나 커밋후 다시 시도해야 한다.)</pre>
 
 * yarn.lock파일 제거
@@ -12,6 +13,7 @@
 <pre> yarn add mobx mobx-react babel-preset-mobx </pre>
 
 * package.json 파일을 연 뒤 babel 부분 수정
+
 <pre>
 		"plugins": [
 			[
@@ -30,10 +32,59 @@
 
 </pre>
 
-* Store폴더 생성후 관련 파일 작성
 
-* mobx를 사용할 때에는 observable를 사용하여 state를 관리
+*  state , action 로직 분류 및 위치 이동
+  
+   * setState는 불필요한 렌더링을 만듦
+   * @action으로 state를 동기적 방식으로 변경할수 있다.  
+  
+ <pre> 기존 src폴더 구조 </pre>
+
+![기존 src폴더 구조] (https://yoonucho.github.io/post_img/tree1.gif)
+
+ <pre>MobX적용후 src 폴더 구조</pre>
+
+ 
+ ![MobX적용후 src 폴더 구조] (https://yoonucho.github.io/post_img/tree2.gif)
+
+
+* root에 있는 index.js에 Provider로 프로젝트에 스토어 적용
+  
 <pre>
+
+  	import { Provider } from "mobx-react";
+	import RootStore from "./Stores";
+
+	// 스토어 인스턴스 생성
+	const root = new RootStore();
+
+	// App 컴포넌트를 Provider컴포넌트로 살포시 감싸준다.
+	ReactDOM.render(<Provider {...root}><App /></Provider>, document.getElementById("root"));  
+</pre>
+
+* List.js에 @observer를 사용한다.
+* 그 위에 @inject('listStore')를 넣어주면  listStore를 props로 전달받을 수 있게 된다.
+  
+<pre>
+
+	import { observer, inject } from "mobx-react";
+
+	@inject('listStore')
+	@observer
+	class List extends Component {
+		componentDidMount() {
+		... 중략
+
+</pre>
+
+
+
+* listStore.js에서 observable를 사용하여 state를 관리
+
+<pre>
+
+	import { observable, action } from "mobx";
+
 	@observable items = [];
 	@observable numOfRows = 72;
 	@observable pageNo = 1;
@@ -42,23 +93,75 @@
 	@observable isLoading = false;
 	@observable error = false;
 </pre>
- 
-*  state , action 로직 위치 이동
+
+* async, await은 state가 변화하는 코드를  runInAction 유틸리티로 감싸 action을 실행 할 수 있다.
+
+<pre>
+
+	import { observable, action, runInAction } from "mobx";
+
+	@action
+	// 매개변수로 pageNo를 넣어준다.
+	loadList = async (pageNo) => {
+
+		try {
+			const { items, pageNo, numOfRows } = this;
+			const url = `/page/${numOfRows}/${pageNo}`;
+			const response = await fetch(url);
+			const json = await response.json();
+
+			runInAction(() => {
+				console.log(this)
+				console.log(`${this}, "numOfRows:" ${numOfRows}, "pageNo:" ${pageNo}`);
+				this.setItems([...items, ...json.items.item]);
+			});
+
+
+		} catch (err) {
+			runInAction(() => {
+				console.log(err);
+				this.isLoading = false;
+			})
+		}
+	};
+
+</pre>
+
+* 기존 액션함수들도 문법에 맞게 코드를 수정해준다.
   
-   * setState는 불필요한 렌더링을 만듦
-   * @action으로 state를 동기적 방식으로 변경할수 있다.
+<pre>
 
-* Provider로 프로젝트에 스토어 적용
-	* App 컴포넌트를 Provider컴포넌트로 살포시 감싸준다.
+	@action
+	setItems = (items) => {
+		this.items = items;
+		this.isLoading = false;
+		this.scrolling = false;
+	}
 
-* 스토어를 분리시킨 해당 컴포넌트에 @observer를 사용한다.
+	@action
+	loadMore = () => {
+		this.pageNo++;
+		this.isLoading = true;
+		this.scrolling = true;
+		this.loadList();
+	}
 
-* 그 위에 @inject('listStore')를 넣어주면  listStore를 props로 전달받을 수 있게 된다.
+	... 중략
+	
 
-* async, await은 
+</pre>  
 
+### 어려웠던 점
+	
+* 정말 1도 모를때는 별도의 state관리 개념이 자식 컴포넌트까지 완전히 분리하는 작업인가라고 상상했었다 ㅋ
+* 포스팅이나 관련 유툽을 보고 튜토리얼을 진행하면서  이걸 내 프로젝트에는 어떻게 적용해야하나 막막하고 어렵게 느껴졌다.
+* 실제로 적용하면서는 보기에는 제대로 동작하는 코드를 다시 바꿔야하는 과정이 두려워서 코드를 바꾸는데 한없이 쭈구리가 되었다.
+* @observable를 붙이기만 해도 된다는 걸 의심했었다. 아니 믿을 수가 없었다. 
+* state가 적용되는 코드를 분류하는 과정이 이게 제대로 된게 맞는지 확신이 없었다.
+* MobX적용하는 문법(?)이  개발자의 취향이나 필요에  따라서  조금씩 다른 부분이 있었고 나는 어떤걸 적용해야 할지 고민이 되었다.
+* 예상대로 MobX로 적용하면서 제대로 적용을 못했을때 에러를 뿜거나 제대로 실행이 안되어서 좌절하였었다.
 
+### 느낀 점
 
-
-  
-  
+* state와 액션을 따로 분류하니 리액트 컴포넌트를 정말 뷰로 사용할 수 있겠구나 감탄하며 구조의 깔끔함을 경험하였다!
+* 이래서 흑마법 흑마법하는구나 라고 작은 느낌을 받았다.
