수정: 잘못된 정보에 대한 내용 정정

--- a/yu_report/yu_190719_UI.md
+++ b/yu_report/yu_190719_UI.md
@@ -33,7 +33,7 @@
 *  쿠팡의 회원가입 폼이 맘이 들었다. (https://login.coupang.com/login/memberJoinFrm.pang?eventCategory=GNB&eventLabel=member_register)
 
 	이용약관을 클릭하면 하단에 보여지고  전자금융거래이용약관등을 클릭하면 관련내용이 보여지는것이 탭보다는 라우터를 이용한것
-	같아서 찾아보니 리덕스로 구현된 것이었다.
+	같아서 찾아보니 리덕스로 구현된 것이었다.  -> 아이고 이런.. 착각했다 제이쿼리 이벤트와 a태그 책갈피기능을 사용한 것이었다
 
 #### 구현방법 결정 
 
