상단 검색필터 UI 수정시 문서 내용 정리

--- a/yu_report/yu_190802_UI.md
+++ b/yu_report/yu_190802_UI.md
@@ -1,4 +1,4 @@
-## 상단 필터박스 셀렉트박스로 검색하기 구현 (실제 데이터x)
+## 상단 필터 셀렉트박스로 검색하기 구현 (실제 데이터x) -> 검색바로 변경
 
 
 ### UI구현계획
@@ -35,6 +35,19 @@
    
    * 필터버튼이 셀렉트박스의 수직정렬이 되게끔 반응형 작업을 한다.
 
+![1차 UI 셀렉트박스형식] (https://yoonucho.github.io/post_img/search-box-UI.gif)
 
 
+### UI구현계획 변경1 (멘토링 후)
 
+* 셀렉트박스가 너무 많아서 사용자 입장에서도 불편하다.
+* 혜인님과 상의 후 캘린더 + 검색바 형식으로 변경을 하기로 결정하였다.
+
+![2차 UI 캘린더+ 검색바 + 검색버튼 ] (https://yoonucho.github.io/post_img/search-box-UI2.gif)
+
+### UI구현계획 변경2 
+
+* 기본 웹 UI작업을 다하고 반응형 작업을 하려고 하는데 브라우저 폭을 줄였을때 검색버튼만 달랑 떨어지는 구간이 생긴다.
+* 수정을 할수도 있지만 검색아이콘을 검색바안에 넣고 엔터키를 누르면 결과가 나오게 하는게 더 낫지 않을까?
+
+![3차 UI 캘린더+ 검색바 + 검색버튼 ] (https://yoonucho.github.io/post_img/search-box-UI3.gif)
