--- a/hi_report/190821_join.md
+++ b/hi_report/190821_join.md
@@ -7,3 +7,57 @@
 
 # fetch
 ## promise란..?
+자바스크립트의 작업은 거의 비동기로 이루어 지는데, 어떤 작업을 요청하면서 콜백 함수를 등록하면
+작업이 수행되고 나서 결과를 나중에 콜백 함수를 통해 알려주는 식이다. 이런 패턴은 흔하게 사용된다.
+다만 콜백 함수가 중첩이 되는 상황이 오면 복잡도가 높아져 어려운 케이스가 된다.
+이러한 상황을 해결하기 위해 promise패턴이 나오게 된것이다. promise패턴을 사용하면
+비동기 작업들을 순차적으로 진행하거나 병렬로 진행하는 등 컨트롤이 수월해지고 코드의 가독성이
+좋아진다.
+
+~~~
+//Promise 선언
+var _promise = function (param) {
+
+	return new Promise(function (resolve, reject) {
+
+		// 비동기를 표현하기 위해 setTimeout 함수를 사용 
+		window.setTimeout(function () {
+
+			// 파라메터가 참이면, 
+			if (param) {
+
+				// 해결됨 
+				resolve("해결 완료");
+			}
+
+			// 파라메터가 거짓이면, 
+			else {
+
+				// 실패 
+				reject(Error("실패!!"));
+			}
+		}, 3000);
+	});
+};
+
+//Promise 실행
+_promise(true)
+.then(function (text) {
+	// 성공시
+	console.log(text);
+}, function (error) {
+	// 실패시 
+	console.error(error);
+});
+~~~
+
+- 지금은 없으니까 이따가 줄께~ 라는 약속이다. 더 정확히는 지금은 없는데 이상없으면 이따가주고
+없으면 알려줄게~ 라는 약속이다.
+
+- pending : 아직 약속을 수행중인 상태
+
+- fulfilled : 약속이 지켜진 상태
+
+- rejected : 약속이 어떤 이유에서 못 지켜진 상태
+
+- settled : 약속이 지켜졌든 안지켜졌든 일단 결론이 난 상태
