로그인 작업중

--- a/hi_report/1909004_login.md
+++ b/hi_report/1909004_login.md
@@ -22,4 +22,5 @@
 
 1. 아이디, 비밀번호를 서버로 보낸다
 2. 서버는 받은 데이터를 DB와 조회하여 일치하는 값이 있는지 확인한다.
-3. 결과에 따른 값을 res.body로 전달
+3. 결과에 따른 값을 res.body로 전달 
+4. 오류가 없다면 서버측에서는 세션을 저장하고 프론트에서는 그 값을 암호화하여 쿠키에 저장
