--- a/hi_report/190904_login.md
+++ b/hi_report/190904_login.md
@@ -28,18 +28,21 @@
 ## 구현 방법2 : PASSPORT 모듈
 ```
 Passport : node.js에서 계정관리를 할 때 가장 많이 쓰이는 package
+
 ```
 ### 참고 URL
  - https://blog.naver.com/azure0777/220598507492
  - https://cheese10yun.github.io/passport-mysql/
 
 ----
-
+~~~
 1. 스토리지를 사용해 로그인 유지
 ~~~
 로그인이 되었다고해서 로그인이 유지되지 않는다.
 브라우저를 새로고침하면 state가 초기화하기 때문에
 스토리지의 정보를 사용하여 로그인을 유지해야한다. 
 ~~~
+- mobx-state-tree : mobx에서 onSnapshot을 이용하는 방법ㅇ ㅣ있어서......단순한건줄 알았는데 mobx에서 뭔가 발전된 것이라고함
+- 서버에서 세션저장에 성공 > 프론트에서 스토리지에 값 저장 > 값이 있으면 ..유지시키고..없으면..이런플로우인가
 
 2.mobx로 로그인상태를 관리
