작업문서 추가

--- a/hi_report/190904_login.md
+++ b/hi_report/190904_login.md
@@ -56,3 +56,36 @@ Passport : node.js에서 계정관리를 할 때 가장 많이 쓰이는 package
  `request.session.save()`
 
 5. Oauth
+
+
+6. 최종작업방식
+
+ 로그인 작업에서 가장 막혔던 부분은 새로고침했을때 로그인을 유지하는 부분이었다.
+ 처음엔 localStorage를 사용하지 않고 passport.js로만 어딘가에 받아온 세션정보를 사용하면 될까싶어서 계속해보았는데 세션정보도 눈에 보이지 않으니 잘 되지 않아서 세션 정보를 볼 수 있도록 FileStore를 사용하여 session폴더 내에 세션정보가 저장되게 하였다. 이렇게해도 내가 생각한 방법으로는 유지시킬 수 없을 것같아 web storage를 사용하여 유지시키는 방식으로 진행하였다.
+
+  - 1. passport.js와 session, FileStore 를 사용해서 로그인시 session폴더에 세션 저장.
+  - 2. 새로고침시에도 로그인 상태를 유지하기위해서 passport.js에서 받아온 유저 정보를 localStorage를 사용해 저장하여 유지시킴
+
+  ```
+  localStorage와 sessionStorage가 있는데
+  ssessionStorage는 브라우저가 종료되면 정보가 삭제된다고하여
+  localStorage를 선택해 저장하였다
+
+localStorage 
+
+- 직접 지우지 않으면 만료기간이 없음
+
+- 도메인마다 별도로 로컬스토리지 생성
+
+
+sessionStorage
+
+- 세션이 끝나면 종료
+
+- 브라우저 종료시 세션종료
+
+- 브라우저가 다르면 서로 다른영역
+
+- 도메인마다 별도로 세션스토리지 생성
+
+```
