회원정보수정팝업 작업중

--- a/hi_report/191023_modify.md
+++ b/hi_report/191023_modify.md
@@ -18,3 +18,4 @@
 - 디비에 입력된 정보가 있으면 셋팅 없으면 X
 - layerLogin.js에서 로그인시에 셋팅하려고함 -> 셋팅은 layerModifyInfo의 할일이라 생각하고 layerModifyInfo에서 작업하기로 변경
 - 요청을 어디로 보내느냐...이건 먼저 데이터를 가져와야 되니까 async..?
+- 로그인시에 셋팅이 미리 완료되어있어야되니까 layerLogin.js에서 다시 해야될듯
