회원정보수정하기

--- a/hi_report/191023_modify.md
+++ b/hi_report/191023_modify.md
@@ -19,3 +19,15 @@
 - layerLogin.js에서 로그인시에 셋팅하려고함 -> 셋팅은 layerModifyInfo의 할일이라 생각하고 layerModifyInfo에서 작업하기로 변경
 - 요청을 어디로 보내느냐...이건 먼저 데이터를 가져와야 되니까 async..?
 - 로그인시에 셋팅이 미리 완료되어있어야되니까 layerLogin.js에서 다시 해야될듯
+- componentWillMount로 render전 미리 데이터 가져와서 셋팅시키기
+
+## 회원정보팝업 정보 수정하기
+- UPDATE사용
+- null값과..undefined ....
+- 수정이 안되었을때 체크값도 필요할 듯
+- 이름만 수정했을 때!비밀번호만 수정했을 떄! 수정이 없을때!
+
+## 자주나오는 오류
+`ECONNRESET`
+
+`SyntaxError: Unexpected token P in JSON at position 0`
