--- a/hi_report/191023_modify.md
+++ b/hi_report/191023_modify.md
@@ -24,10 +24,60 @@
 ## 회원정보팝업 정보 수정하기
 - UPDATE사용
 - null값과..undefined ....
+```
+    - undefined : 컴퓨터가 넣은 빈값
+    - null : 내가 넣은 빈값
+
+    컴퓨터가 넣은 값인지 내가 고의적으로 넣은 값인지 구분지을 수 있게
+    null을 쓰는걸 권장한다
+```
 - 수정이 안되었을때 체크값도 필요할 듯
 - 이름만 수정했을 때!비밀번호만 수정했을 떄! 수정이 없을때!
 
 ## 자주나오는 오류
-`ECONNRESET`
+### 1.ECONNRESET
 
-`SyntaxError: Unexpected token P in JSON at position 0`
+```javascript
+Proxy error: Could not proxy request /page/20191031/20191031/147/1 from localhost:3000 to http://localhost:8080.
+See https://nodejs.org/api/errors.html#errors_common_system_errors for more information (ECONNRESET).
+```
+### 원인
+
+파악중..
+
+---
+
+### 2.Unexpected token P in JSON at position 0
+
+```javascript
+SyntaxError: Unexpected token P in JSON at position 0
+```
+### 원인
+서버에서 응답으로 JSON데이터가 왔을때 프론트에서 JSON이 파싱되지 않았을 때 나는 오류
+[참고 URL](https://daveceddia.com/unexpected-token-in-json-at-position-0/)
+
+### 해결방법
+```javascript
+JSON.parse(theStringThatIsNotJson);
+```
+요청해서 받아온 JSON데이터를 파싱하여 값이나 객체로 변환한다.
+
+`JSON.parse` : JSON문자열을 JavaScript값이나 객체로 변환
+`JSON.stringify` : JavaScript값이나 객체를 JSON 문자열로 변환
+
+---
+
+### 3.Unexpected token P in JSON at position 1
+```javascript
+SyntaxError: Unexpected token P in JSON at position 1
+```
+### 원인
+javaScript객체를 `JSON.parse`를 사용하여 javaScript객체로 변환할때 나는 오류(같은 자바스크립트 객체를 객체로 변환하려고 하기때문에 나는 오류)
+
+### 오류예시
+```javascript
+const jsObj = { "test1":"hi1", "test2":"hi2","test2":"hi3" }
+const myObj = JSON.parse(jsObj)
+
+consoel.log(myObj.test1)
+```
