Save meeting file

--- a/meetings/meeting#15_20191204.md
+++ b/meetings/meeting#15_20191204.md
@@ -1,54 +1,25 @@
 
 # 미팅 기록
 
-## 근황 토크
+## 애니매이션 라이브러리
 
-- 윤우님 두번째 회사 면접 진행한 얘기: 첫번째 보다는 부드럽게 진행했지만 면접 준비를 더 잘해야겠다는 생각
-  - 이력서 상에 쓴 내용들 대문에 질문에 대답하기 어려운 게 있다면, 제외하는 것도 고려해 볼 수 있음
-  - 면접관은 어제 했든, 3년 전에 했든, 10년 전에 했든 알고 있을거라 가정하고 질문하기 때문
-- 혜인님 야근 이유: 지난 번 회사에서 준 일을 하고 있었음
-- 이노베이션 아카데미와 에꼴42 얘기
-  - 멘토 모집 설명회 후기 얘기해 주기
+- tweenmax: 괜찮아 보이는 방식이네요.
+- "recommended animation library javascript"라고 검색하면 더 괜찮은 라이브러리가 나오는 군요, 이런것도 같이 살펴보시면 어떨까요?
 
-## 혜인님 이슈: nodemailer에서 메일이 보내지지 않는 문제
+## 웹 크롤링과 API 사용에 대해
 
-- [https://github.com/henyy1004/nyangterest/blob/master/hi_report/191113_nodemailer.md](https://github.com/henyy1004/nyangterest/blob/master/hi_report/191113_nodemailer.md)
-- post 요청 처리에서 res.json() 부분이 transporter.sendMail 후 에러가 없다는 걸 확인한 다음에 하면 문제는 없음
-- 그런데 join.js 에서는 이렇게 하지 않아도 동작이 됨
-- 두 파일에서 처리하는 방식이 다르지 않은데 동작이 다른게 의문
-- res로 리턴해 주는 시간과 sendmail의 시간이 다를 것 같다는 추측
-  - sendmail과 res.json의 시간이 어떻게 다른지 측정해 보고 join.js에서의 처리 로직과 server.js가 어떻게 다른지 분석
-  - 그외 의심갈만한 모든 활동을 해 보고 문제점 발견 시도해 보세요.
+- API 제공을 해준다면 API를 쓰는게 바람직
+- 그런데 데이터의 변화가 크지 않다면 크롤링도 적절한 방법
+  - 왜? 포켓몬스터의 경우 데이터가 막 바뀌거나 하지 않는 데이터
+  - 상대적으로 데이터가 수시로 변하는 날씨나 버스 도착시간 및 위치 데이터는 API 호출로 데이터를 얻어오는게 바람직
+- 만약 크롤링 관심 있으시면 python으로도 해보면 좋습니다. 준비해 오신 링크의 beautiful soup이 대표적이에요.
 
-## 크롬 브라우저 디버깅
+## 재밌는 블로그
 
-- console.log는 이제 그만, 브라우저에서 breakpoint, step over만 해 줘도 충분히 디버깅이 잘 됩니다.
-- 다른 언어 (C, JAVA)에서의 디버깅은 당연히 debugger를 붙인 디버깅을 의미함.
-- 익숙해지면 console.log는 진짜 로그용으로만 하게 됨
-- 서버 디버깅은 항상 프로세스가 돌고 있어야 하는 서비스이므로 debugger를 붙이는건 현실적으로 불가능
-  - 그래서 서버쪽은 로그를 시간별로 자세히 기록하고 나중에 로그 분석 툴로 뽑아 내는게 맞는 방법
-- 냥터레스트에서 로그는 아무 npm 패키지를 적용해서 로그 기록해 보세요.
+- [https://rinae.dev/](https://rinae.dev/)
+- 알려주셔서 감사합니다. 글이 좀 괜찮아 보여서 github에서 follow 했어요.
 
-## 윤우님 이슈: 리스트 필터 시간 측정
+## Home coming day help
 
-- performance.now()가 상당히 오래된(2013년) 거라는 걸 알게됨
-- 실제 로그 시간을 찍어보면 아주 오래 걸리는 건 아님
-- 어쩌면 filter 시간 보다 list rendering 시간이 오래 걸리는 걸 수도 있음
-- 시간 정밀도 ms 수준으로 차이를 계산할 수 있다면 보다 자세한 시간 분석이 가능해짐
-  - 크롬 브라우저에서 for문 수행시간 ms 측정 테스트 진행
-  - console.log 10000번 찍는 것도 생각보다 오래 걸리지 않음
-  - 그러면 filter 시간 보다는 다른 문제가 있을 것으로 예측됨
-- 실제 리스트의 렌더링 코드 리뷰 진행
-  - 로딩 애니매이션 보여주는 것의 문제?: 쓸데없이 로딩하느라 시간 걸리는 것일수도
-  - List 컨테이너를 변경하면 해결되는 문제?: 섬네일 이미지가 포함되서 렌더링 되는 list를 사용해 보면 어떨까요?
-  - 이것도 의심가는 부분 여러 군데를 체크해 보고 성능 개선을 할 수 있는지 분석
-- 개인적인 의견
-  - 이 정도 문제를 해결하기 위해 시간을 쓰는 거라면
-  - 실무자들이 실제 문제 해결하기 위해 시간 쓰는 것과 크게 다르지 않습니다
-  - 정말 해결하고 싶으시면 분석을 조금 더 잘 하고 분석결과에 대한 객관적 기록을 잘 진행해 주세요.
-
-## 면접 떄 나온 질문에 대한 저의 개인적인 의견
-
-- 들여쓰기를 2 space로 하는 것에 대한 것
-  - 글쎄요 python 해봤냐고 물어보고 싶은데 안해봤다면 그냥 그 개발팀의 규칙이라고 받아들이는게 맞는 것 같아요
-  - 중괄호를 다음 라인에 쓰냐 아니냐의 취향 차이
+- 윤우님이 제가 상수역 가는 길에 경인고속도로 입구에서 태워드리고, 저의 짐을 같이 들어주시면 고맙겠습니다.
+- 혜인님도 도와 주시면 감사합니다.
