--- a/meetings/meeting#15_20191204.md
+++ b/meetings/meeting#15_20191204.md
@@ -1,6 +1,15 @@
 
 # 미팅 기록
 
+## 면접때 질문을 받고 공부를 하게 된 Reflow&Repaint
+
+- [Reflow&Repaint](https://yoonucho.github.io/review/2019/11/22/reflow&repaint.html)
+- React 가 필요한 DOM만 다시 render 하는 것과의 연관성이 있을까요?
+- 성능적인 문제는 사실 이런 규칙을 지키는 것도 중요하겠지만, 동적인 코드를 짜면서 생기는 복합적인 문제일 가능성이 더 큼
+  - 네트워크의 속도 문제
+  - 큰 용량이 이미지를 여러개 불러오는 문제 (async하게 만들지 않으면 느려지게 됨)
+- 그리고 성능 그래프가 문제가 있는 것처럼 보여주고 있긴 한데, 자세히 보면 0.xxx ms의 차이가 얼마나 체감이 될지는 잘 모르겠네요. 
+
 ## 애니매이션 라이브러리
 
 - tweenmax: 괜찮아 보이는 방식이네요.
