Apply comment by [yu]

--- a/meetings/meeting#16_윤우님단독_필터검색기능리뷰_20191227.md
+++ b/meetings/meeting#16_윤우님단독_필터검색기능리뷰_20191227.md
@@ -33,6 +33,6 @@
 - 사실 공부하는데 어려움이 많은 건 사실입니다. 비전공자라면요.
 - 제가 알려드리는 건 그 책 하나만 보고 끝내지 말았으면 좋겠습니다.
 - 계속해서 관심이 있거나 알아야 겠다는 생각이 드는 분야가 있으면 다른 책을 계속해서 꾸준히 읽어 나가는 방법으로 해보세요.
-- 책 읽는 것도 어렵다면 블로그 글을 계속 읽어 나가는 것도 방법입니다. (그런데 블로그 글은 싫어하신다고...)
+- 책 읽는 것도 어렵다면 블로그 글을 계속 읽어 나가는 것도 방법입니다. (그런데 블로그 글을 보는 것 보다 책을 보는게 더 집중이 된다고...)
 - 여러가지 지식과 정보가 모이다 보면 변하지 않는 진실이 보이게 되는데 그게 핵심적인 것이므로 잘 기억해 두면 좋겠죠.
 - 기억을 못하더라도 나중에라도 계속해서 새로운 책이 나오면 읽으면 됩니다. 저처럼요.
