Add more node cors issue

--- a/meetings/meeting#21_20200205_비동기처리리뷰_.md
+++ b/meetings/meeting#21_20200205_비동기처리리뷰_.md
@@ -42,7 +42,13 @@
 - webkit 더 찾아보기
 - 렌더링 기본이 webkit base
 
-## cors 이슈 해결한 것
+## 혜인님 cors 이슈 해결한 것
 
 - 파일 읽는 게 목적이라면? 오버엔지니어링
 - javascript로 로컬 파일 읽어오는 방법을 추가로 알아보기, FileReader()
+
+## 갑자기 윤우님의 cors 문제 리뷰
+
+- node로 메일 전송 프로그래밍 연습 중 cors 이슈
+- localhost:3000으로 실행하고 127.0.0.1:3000으로 보내면 왜 안될까요?
+  - DNS를 거치지 않고 "127.0.0.1"은 하드코딩 되어 있는 주소이니까요.
