Update cb_200529_근황및가입시 안내메일이 오지 않는 문제이슈확인요청.md

--- a/collaboration_report/cb_200529_근황및가입시 안내메일이 오지 않는 문제이슈확인요청.md
+++ b/collaboration_report/cb_200529_근황및가입시 안내메일이 오지 않는 문제이슈확인요청.md
@@ -10,3 +10,8 @@
 
 * [#200](https://github.com/henyy1004/nyangterest/issues/200#issuecomment-635783184)에서 진행하려고 했던 이슈 중 마지막 이슈인 가입시 안내메일이 오지 않는 문제가 있고 혜인님이 작성했던 내용이라 잘 아실거 같아서 이슈 확인 요청
 
+* github에는 제외된  db.json, .env파일 압축해서 카톡으로 전달
+
+* table명 member에서 nyang_member로 변경된 내용 전달 
+
+* 혜인님 기존 가입 계정 # 입력안되는 문제 전달 
